# SGTRS

./: .env.example  .gitignore  README.md  pyproject.toml
common/: io.py  lineage.py  time_utils.py
docks/: README.txt  data_dictionary.md
ingest/: tiingo_prices_eod.py
ops/: bronze_nightly.py
tests/: test_ingest_prices.py
